# 2024_umiusi_nucleo.rs

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
