[package]
name = "umiusi"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-probe = "0.3.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

stm32f3xx-hal.version = "0.10.0"
stm32f3xx-hal.features = ["rt", "stm32f303x8"]

[lints.clippy]
pedantic.level = "deny"
pedantic.priority = 0
missing_errors_doc.level = "allow"
missing_errors_doc.priority = 1
