[package]
name = "umiusi"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
embedded-time = "0.12"
embedded-alloc = "0.6"
critical-section = "1.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.2"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

stm32f3xx-hal.version = "0.10.0"
stm32f3xx-hal.features = ["rt", "stm32f303x8"]

[lints.clippy]
pedantic.level = "deny"
pedantic.priority = 0
missing_errors_doc.level = "allow"
missing_errors_doc.priority = 1
